--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
-    <div>My name is _______</div>
-    <div>My favorite hobby is _______</div>
+    <div>My name is _Tomi_</div>
+    <div>My favorite hobby is _drumming_</div>
 </body>
 </html>
