Added line about my favorite game.

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Hello, World!</h1>
     <div>My name is _Tomi_</div>
     <div>My favorite hobby is _drumming_</div>
+    <div>My favorite game is probably World of Warcraft(Retail)</div>
 </body>
 </html>
